# PaddleCustomDevice

.github/workflows/: _IXUCA.yml  update_paddle_submodule.yml
backends/gcu/kernels/: pool2d_kernel.cc
backends/gcu/tests/fuse_pass/: test_custom_engine_ppocr_cls.py
backends/iluvatar_gpu/: CMakeLists.txt  build_paddle.sh
backends/iluvatar_gpu/kernels/cuda_kernels/: interpolate_grad_kernel_register.cu
backends/iluvatar_gpu/patches/: paddle-corex-test.patch  paddle-corex.patch
backends/intel_hpu/kernels/: hpu_funcs.h
backends/intel_hpu/runtime/: runtime.cc
backends/intel_hpu/tests/: config.py
backends/metax_gpu/: CMakeLists.txt  build.sh
backends/metax_gpu/cmake/: cblas.cmake  generic.cmake  paddle.cmake  third_party.cmake  version.cmake
backends/metax_gpu/kernels/: cross_entropy_grad_kernel_register.cu  cross_entropy_kernel_register.cu  flags_declare.cu  flash_attn_grad_kernel.cu  flash_attn_kernel.cu  flash_attn_utils.h  flashattn.h
backends/metax_gpu/patch/: paddle.patch
backends/metax_gpu/runtime/: runtime.cc
backends/metax_gpu/tests/: CMakeLists.txt  run_test.sh
backends/metax_gpu/tests/unittest/: test_elementwise_mul_op_metax.py  test_expand_v2_op_metax.py  test_max_op_metax.py  test_tile_op_metax.py  test_tril_triu_op_metax.py
backends/mlu/tools/: disable_ut_mlu  pr_ci_mlu.sh
backends/npu/tools/: pr_ci_npu.sh
backends/sdaa/: pr_ci_sdaa.sh
backends/sdaa/kernels/: activation_kernel.cc  arg_max_min_kernel.cc  expand_as_kernel.cc  instance_norm_kernel.cc  pool2d_kernel.cc
backends/sdaa/tests/: CMakeLists.txt
(+105 files in other folders)
